fix: Added functionality to retrieve leaderboard